# consensus-engine

./: .dockerignore  .env.example  .gitignore  DOCKER.md  Dockerfile  Dockerfile.worker  IMPLEMENTATION_SUMMARY.md  IMPLEMENTATION_SUMMARY_dockerfiles.md  IMPLEMENTATION_SUMMARY_full_review_persistence.md  IMPLEMENTATION_SUMMARY_pipeline_worker.md  IMPLEMENTATION_SUMMARY_revision_workflow.md  IMPLEMENTATION_SUMMARY_roadmap_packet.md  LLMs.md  README.md  alembic.ini  docker-compose.yml  pyproject.toml
.github/repo-analysis-output/: dependencies.json  dependencies.md  file-summaries.json  file-summaries.md  tree.json  tree.md
docs/: GCP_DEPLOYMENT_ARCHITECTURE.md  MULTI_PERSONA_ORCHESTRATION.md  PROMPT_CONTRACTS.md  ROADMAP_PACKET_ARCHITECTURE.md  SCHEMA_REGISTRY.md  SCHEMA_VERSIONING.md  VERSION_TRACKING.md  WEB_FRONTEND.md  WORKER_DEPLOYMENT.md  async_run_persistence.md
examples/: test_full_review.py
infra/cloudrun/: README.md  backend-service.yaml  frontend-service.yaml  worker-service.yaml
migrations/: env.py
migrations/versions/: 1be7b272f496_add_analytics_index_for_decision_and_.py  453a79c83bde_add_versioned_run_tables.py  77563d1e925b_add_async_run_and_step_progress.py  9a73090ad792_initial_empty_migration.py  a1b2c3d4e5f6_add_version_tracking_to_runs.py
scripts/: generate-api-client.sh
src/consensus_engine/: __init__.py  app.py  exceptions.py
tests/: README.md  __init__.py  conftest.py
tests/fixtures/: README.md
tests/integration/: __init__.py  test_acceptance_criteria.py  test_app.py  test_db.py  test_diff_endpoint.py  test_expand_endpoint.py  test_expand_service.py  test_full_review_endpoint.py  test_job_enqueue.py  (+7 more)
webapp/: .dockerignore  .env.example  Dockerfile  eslint.config.js  openapi.json  package-lock.json  package.json  postcss.config.js  tailwind.config.js  vite.config.ts
(+98 files in other folders)
